@@ -1,0 +1,11 @@
+/* acconfig.h */
+
+/* Define the package name.  */
+#undef PACKAGE
+
+/* Define the version number.  */
+#undef VERSION
+
+/* Define if you need GNU extentions.  */
+#undef _GNU_SOURCE
+
