@@ -1,7 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(glclock.cc)
 dnl $Format: "AM_INIT_AUTOMAKE($Package$, $Version$)" $
-AM_INIT_AUTOMAKE(rglclock, 0.55.1)
+AM_INIT_AUTOMAKE(rglclock, 1.1u.1)
+AM_CONFIG_HEADER(config.h)
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
