@@ -1,5 +1,12 @@
 1999-01-24  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
+	* configure.in: Add the config header.
+
+	* acconfig.h: New file.
+	* config.h.in: Generated by autoheader.
+
+	* gdkgl.c [HAVE_CONFIG_H]: Include "config.h".
+
 	* NEWS: Updated.
 
 1999-01-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
